--- a/index.html
+++ b/index.html
@@ -1,75 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=Neo, initial-scale=1.0">
-    <title>Simge Atlıhan</title>
-    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-    <link href='assets/css/style.css' rel='stylesheet'>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simge Atlıhan</title>
+  <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+  <link href='assets/css/style.css' rel='stylesheet'>
+</head>
+<body>
 
-    <header class="page__header header">
-      <div class="header__container container">
-        <div class="header__body">
-          <div class="header__leftside">
-            <a href="#" title="" class="header__logo"></a>
-          </div>
-          <div class="header__rightside">
-            <div class="header__menu header-menu">
-              <ul class="header-menu__list">
-                <li class="header-menu__item">
-                  <a href="https://github.com/simgeatlhn" title="" class="header-menu__link">Projects</a>
-                </li>
-                <li class="header-menu__item">
-                  <a href="mailto:simgeeatlihan@gmail.com" title="" class="header-menu__link">Email</a>
-                </li>
-              </ul>
-            </div>
-            <div class="header__changer">
-              <div class="header__moon">
-                <i class='bx bx-moon'></i>
-              </div>
-            </div>
-            <div class="header__mob">
-              <div class="header__mob-menu">
-                <i class='bx bx-menu' ></i>
-              </div>
-            </div>
-          </div>
-        </div
+<header class="page__header header">
+  <div class="header__container container">
+    <div class="header__body">
+      <div class="header__leftside">
+        <a href="#" title="" class="header__logo"></a>
       </div>
-    </header>
-
-    <div class="page__intro intro">
-      <div class="intro__container container">
-        <div class="intro__body">
-          <div class="intro__content">
-            <h1 class="intro__title">Hi, I'm <span>Simge</span></h1>
-            <span class="intro__position">Software Engineer</span>
-            <p class="intro__text">
-                <div class="intro__btn">
-              <a href="#" title="" class="btn">Contact Me</a>
-            </div>
-            <div class="intro__socials intro-soc">
-              <div class="intro-soc__item">
-                <a href="https://www.linkedin.com/in/simge-atlıhan-b774821bb/" title="" class="intro-soc__link"><i class='bx bxl-linkedin'></i></a>
-              </div>
-              <div class="intro-soc__item">
-                <a href="https://github.com/simgeatlhn" title="" class="intro-soc__link"><i class='bx bxl-github' ></i></a>
-              </div>
-              <div class="intro-soc__item">
-                <a href="mailto:simgeeatlihan@gmail.com" title="" class="intro-soc__link"><i class='bx bx-envelope'></i></a>
-              </div>
-            </div>
+      <div class="header__rightside">
+        <div class="header__menu header-menu">
+          <ul class="header-menu__list">
+            <li class="header-menu__item">
+              <a href="https://github.com/simgeatlhn" title="" class="header-menu__link">Projects</a>
+            </li>
+            <li class="header-menu__item">
+              <a href="mailto:simgeeatlihan@gmail.com" title="" class="header-menu__link">Email</a>
+            </li>
+          </ul>
+        </div>
+        <div class="header__changer">
+          <div class="header__moon">
+            <i class='bx bx-moon'></i>
           </div>
-          <div class="intro__img">
-            <img src="assets/img/profile.jpeg" alt="">
+        </div>
+        <div class="header__mob">
+          <div class="header__mob-menu">
+            <i class='bx bx-menu' ></i>
           </div>
         </div>
       </div>
     </div>
-    <script src="assets/js/script.js"></script>
-  </body>
+  </div>
+</header>
+
+<div class="page__intro intro">
+  <div class="intro__container container">
+    <div class="intro__body">
+      <div class="intro__content">
+        <div class="intro__img">
+          <img src="assets/img/profile.jpeg" alt="">
+        </div>
+        <h1 class="intro__title">Hi, I'm <span>Simge</span></h1>
+        <span class="intro__position">Software Engineer</span>
+        <div class="intro__btn">
+          <div class="intro-soc">
+            <div class="intro-soc__item">
+              <a href="https://www.linkedin.com/in/simge-atlıhan-b774821bb/" title="" class="intro-soc__link"><i class='bx bxl-linkedin'></i></a>
+            </div>
+            <div class="intro-soc__item">
+              <a href="https://github.com/simgeatlhn" title="" class="intro-soc__link"><i class='bx bxl-github' ></i></a>
+            </div>
+            <div class="intro-soc__item">
+              <a href="mailto:simgeeatlihan@gmail.com" title="" class="intro-soc__link"><i class='bx bx-envelope'></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>    
+  </div>
+</div>
+
+
+<script src="assets/js/script.js"></script>
+</body>
 </html>
